# proj_777-resume

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-dev.yml  security.yml
alembic/: env.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useDocumentUpload.ts  useWebSocket.ts
frontend/src/pages/: DashboardPage.tsx  DocumentsPage.tsx  LandingPage.tsx  LoginPage.tsx  ProfilePage.tsx  QAPage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  auth.ts  documents.ts  qa.ts  user.ts
frontend/src/types/: document.ts  qa.ts
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml.template  services.yaml
scripts/: db-reset.sh  dev-setup.sh
src/: main.py
src/ai/: __init__.py  exceptions.py  models.py  rate_limiter.py  service.py
src/ai/prompts/: __init__.py  resume_templates.py  (+1 more)
src/api/: auth.py  documents.py  health.py  qa.py  websocket.py
src/auth/: __init__.py  dependencies.py  schemas.py  security.py  service.py
src/core/: __init__.py  config.py  logging.py
src/database/: base.py  connection.py
src/generation/: __init__.py  service.py
src/notifications/: __init__.py  email_service.py  service.py
src/parsing/: __init__.py  exceptions.py
src/qa/: __init__.py  context_builder.py  export.py  schemas.py  search.py  service.py  title_generator.py
src/storage/: __init__.py  exceptions.py  s3_client.py  service.py  validators.py  virus_scanner.py
src/tasks/: celery_app.py  document_tasks.py  monitoring.py  notification_tasks.py
src/websocket/: __init__.py  auth.py  connection.py  manager.py  models.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_files.py
tests/test_api/: test_documents.py  test_health.py  test_qa.py
tests/test_auth/: test_endpoints.py  test_security.py
tests/test_database/: test_models.py
tests/test_qa/: __init__.py  test_models.py  test_search.py  test_service.py
tests/test_tasks/: __init__.py
tests/test_websocket/: test_manager.py
(+58 files in other folders)
